парсинг stats и фиксы